--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -6,7 +6,7 @@
     margin-top: 50px;
     height: 250px;
     border-radius: 10px;
-    background-image: url("../../assets/bg.png");
+    background-image: url("../../assets/5.jpg");
     background-position: center;
     background-size: cover;
     font-size: 30px;
